--- a/landingpage.html
+++ b/landingpage.html
@@ -21,13 +21,13 @@
             <h3>Me and My Journey as a Web Map Maker</h3>   
             <p>My name is Elizabeth but I prefer to go by Liz. I am still learning how to be a web developer and map maker but I have learned so much in this course already. I hope to continue to learn some more and put my skills to use. I will admit I have struggled a bit in this class but I am really proud of myself for how far I have come. </p>
 
-            <a href="file:///C:/Users/Liz/OneDrive/Desktop/MAGIST/414_Programming/Andrusenki_unit1_assignment.html" class="btn btn-light" role="button" >Intro to JS and Web Mapping</a>
+            <a href="https://eandrusenki.github.io/magistassign/Unit1.html" class="btn btn-light" role="button" >Intro to JS and Web Mapping</a>
             <hr>
-            <a href="file:///C:/Users/Liz/OneDrive/Desktop/MAGIST/414_Programming/Module2/Andrusenki_unit2_assignment_part1.html" class="btn btn-light" role="button">Thematic Mapping w/ Leaflet</a>
+            <a href="https://eandrusenki.github.io/magistassign/Unit2.html" class="btn btn-light" role="button">Thematic Mapping w/ Leaflet</a>
             <hr>
-            <a href="file:///C:/Users/Liz/OneDrive/Desktop/MAGIST/414_Programming/Module3/Andrusenki_Module3.html" class="btn btn-light" role="button">Interactive Mapping w/ Hosted Vector & Image Tile Services</a>
+            <a href="https://eandrusenki.github.io/magistassign/Unit3.html" class="btn btn-light" role="button">Interactive Mapping w/ Hosted Vector & Image Tile Services</a>
             <hr>
-            <a href="file:///C:/Users/Liz/OneDrive/Desktop/MAGIST/414_Programming/Module4/geog414_unit4_assignment.html" class="btn btn-light" role="button">Mapping Inequality w/ D3</a>
+            <a href="https://eandrusenki.github.io/magistassign/Unit4.html" class="btn btn-light" role="button">Mapping Inequality w/ D3</a>
             <hr>
             <a href="" class="btn btn-light" role="button">Web Application Hosting & Development</a>
           </div>
